tests/paczka1/fuzzy1/93570490.err
Error in line 2: 64ofRpR3 A751 8,2
Error in line 5: zhIJqob8LOO S803 14,9
Error in line 14: fqy8ZEfeTjU A855 46,6
Error in line 18: zhIJqob8LOO A751 4Ã,5
Error in line 11: zhIJqob8LOO A751 69,7
Error in line 22: `4ofRpR3 A`11 89,8
Error in line 15: fqy8ZEfeTjU A611 56,9
Error in line 34: A751 A751 65,5
Error in line 35: A751 A611 91,3
